[package]
name = "my-fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ctrlc = { version = "3.4.6", features = ["termination"] }
fuse-backend-rs = "0.12.1"
itertools = "0.14.0"
libc = "0.2.68"
log = "0.4.27"
pretty_env_logger = "0.5.0"
tempdir = "0.3.7"
test-log = "0.2.17"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "read_benchmarks"
harness = false
